save robot config works but save scene is not working yet

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,10 +63,12 @@
     <Compile Include="Assets\RobotManager.cs" />
     <Compile Include="Assets\AlgorithmPlayGround.cs" />
     <Compile Include="Assets\Generator.cs" />
+    <Compile Include="Assets\Data.cs" />
     <Compile Include="Assets\utils.cs" />
     <Compile Include="Assets\Parameter.cs" />
     <Compile Include="Assets\RobotSingular.cs" />
     <Compile Include="Assets\AlgorithmSimple.cs" />
+    <Compile Include="Assets\ProgressManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
